import React from 'react';
import { shallow } from 'enzyme';

import { ExpensesSummary } from '../../components/ExpensesSummary';

describe('ExpenseSummary component test suite', () => {
  test('should render ExpensesSummary correctly with 1 expense', () => {
    const wrapper = shallow(<ExpensesSummary expenseCount={1} expensesTotal={845} />);

    expect(wrapper).toMatchSnapshot();
  });

  test('should render ExpensesSummary correctly with multiple expenses', () => {
    const wrapper = shallow(<ExpensesSummary expenseCount={31} expensesTotal={84573960} />);

    expect(wrapper).toMatchSnapshot();
  });
});