// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseSummary component test suite should render ExpensesSummary correctly with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $8.45
  </h1>
</div>
`;

exports[`ExpenseSummary component test suite should render ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    31
     
    expenses
     totalling 
    $845,739.60
  </h1>
</div>
`;
